REGRESSION (173394): Support for webcam is broken https://bugs.webkit.org/show_bug.cgi?id=139313

Reviewed by Alexey Proskuryakov.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::didReceiveResponseAsync):

    Don't buffer when handling multipart/x-mixed-replace. Multiple calls to didReceiveResponseAsync break assumptions.



Canonical link: https://commits.webkit.org/157238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176947 268f45cc-cd09-0410-ab3c-d52691b4dbfc